--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -14,9 +14,9 @@
         <img class="hidden" data-level="<%= level %>" src="<%= image_path("centre/#{@centre.micello_community}_#{level}.png") %>"/>
       <% end %>
     </div>
-    <%= javascript_include_tag 'map' %>
+    <%= javascript_include_tag 'map/ie_support' %>
     <%= javascript_tag do %>
-      new IEMap({select: <%= store_id || 'null' %>})
+      new map.ie_support.Map({select: <%= store_id || 'null' %>})
     <% end %>
   </div>
 <![endif]-->
@@ -31,8 +31,8 @@
     <% end %>
   </div>
 	<%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
-	<%= javascript_include_tag 'map' %>
+	<%= javascript_include_tag 'map/micello' %>
 	<%= javascript_tag do %>
-	  new Map({select: <%= store_id || 'null' %>})
+	  new map.micello.Map({select: <%= store_id || 'null' %>})
 	<% end %>
 <!--<![endif]-->
