Display the movie classification

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,6 +4,9 @@
 <!-- movie title -->
 <h1><%= @movie.title %></h1>
 
+<!-- Movie rating -->
+<p><%= @movie.classification %></p>
+
 <!-- movie synopsis -->
 <p><%= @movie.synopsis %></p>
 
