restuctures map namespace for better understanding

--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -14,9 +14,9 @@
         <img class="hidden" data-level="<%= level %>" src="<%= image_path("centre/#{@centre.micello_community}_#{level}.png") %>"/>
       <% end %>
     </div>
-    <%= javascript_include_tag 'map/ie_support' %>
+    <%= javascript_include_tag 'map/micello_ie' %>
     <%= javascript_tag do %>
-      new map.ie_support.Map({select: <%= store_id || 'null' %>})
+      new map.micello.ie.Map({select: <%= store_id || 'null' %>})
     <% end %>
   </div>
 <![endif]-->
