--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -21,7 +21,7 @@
     <p>Are you looking for</p>
     <div class='results__products'>
       <ul>
-        <li ng-repeat="suggestion in didYouMean()">
+        <li ng-repeat="suggestion in suggestions">
           <a href="<%= centre_products_path(params[:id]) %>">{{suggestion['description']}}</a>
         </li>
       </ul>
