--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -12,7 +12,7 @@
       <li class="list__heading"><%= letter %></li>
       <% stores.each do |store| %>
         <li class="list__store" data-store-id="<%= store.id %>">
-          <%= image_tag store.logo(width: 100, responsive: true), alt: store.name %>
+          <%= image_tag store.logo(width: 100, retina: true), alt: store.name %>
           <h1><%= link_to store.name, (centre_store_url @centre.code , store.id) %></h1>
           <%= store.phone_number %>
         </li>
