--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -1,6 +1,6 @@
-<span class="tile__image">
-  <%= image_tag result.image('400x400') , alt: result.name %>
-</span>
+<div class="tile__image">
+  <%= image_tag result.image(width: 288, retina: true) , alt: result.name %>
+</div>
 
 <div class="tile__meta">
   <span class="tile__meta__icon">
