hides stores list
These should be hidden while they're restyled. Was removed by mistake

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="stores-map-content">
+<div class="stores-map-content" style="display: none;">
   <ul>
     <li class="list__header">Stores / A-Z</li>
     <% @stores.each do |letter, stores| %>
