--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -1,14 +1,14 @@
-<span class="tile__image">
+<div class="tile__image">
   <% # TODO: fix alt tag %>
-  <%= image_tag result[:_links][:image][:href], alt: result['name'] %>
-</span>
+  <%= image_tag result[:_links][:image][:href], alt: result.name %>
+</div>
 
 <div class="tile__meta">
   <span class="tile__meta__icon">
     <span class="icon icon--products" aria-hidden="true"></span>
   </span>
   <div class="tile__meta__inner">
-    <h3 class="tile__meta__hdr"><%= result[:name] %></h3>
+    <h3 class="tile__meta__hdr"><%= result.name %></h3>
     <%#<p class="tile__meta__desc"><%= raw result[:description] %#></p>%>
   </div>
 </div>
