Touch device fix for social shares

--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -54,7 +54,8 @@
     }
   }
 
-  .tile:hover & {
+  /* Only show on non-touch devices as they dont have hover */
+  .no-touch .tile:hover & {
     display: block;
   }
 }
