--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -3,7 +3,9 @@
 <div id="pin-board" class="pin-board">
 
   <%- @deals.each do |deal| -%>
-    <%= render partial: "shared/tiles/deal", layout: '/layouts/tile', locals: {result: deal} %>
+    <%= render partial: "/shared/tiles/deal", layout: '/layouts/tile', locals: {
+      result: deal
+  } %>
   <%- end -%>
 
 </div>
