--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -1,8 +1,6 @@
 <article class="tile tile--<%= result.kind.pluralize %> box" role="article">
   <em class="hide-visually"><%= result.kind %></em>
-  <%= link_to(defined?(url) ? url : send("centre_#{result.kind}_path", @centre, result)) do %>
-    <%= yield %>
-  <% end %>
+  <%= link_to yield, tile_path(@centre, result) %>
   <div class="tile__controls">
     <%= render "/shared/social_share", result.meta %>
   </div>
