--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -6,11 +6,13 @@
 
     <%# Filters & listing/map toggle button %>
     <div class="stores-maps__filters-toggle">
+
       <div class="container">
 
         <h2 class="stores-maps__hdr">Stores A-Z</h2>
 
         <%# Filters %>
+        <!-- TODO: need to add aria-controls to the 'Apply' button that points to the filters count -->
         <button class="btn btn--main btn--main-alt4">Filter</button>
         <%# Filters %>
 
@@ -22,6 +24,15 @@
         <%# //Listing/map toggle %>
 
       </div>
+
+      <%# Post filter count %>
+      <div class="stores-maps__filters-count">
+        <div class="container">
+          <p aria-live="polite"><span class="icon icon--pin"></span> 44 Results found</p>
+        </div>
+      </div>
+      <%# //Post filter count %>
+
     </div>
     <%# //Filters & listing/map toggle button %>
 
@@ -41,7 +52,7 @@
               <%# Store name %>
               <div class="stores-list__data-cell stores-list__data-cell--store-name">
                 <strong><%= link_to store.name, (centre_store_url @centre.code , store.id) %></strong>
-                <!-- <strong><a href="#">Via Del Corso Pasticceria e Caffé</a></strong> -->
+                <!-- <strong><a href="#">Via Del Corso Pasticceria e Caffé Pasticceria</a></strong> -->
                 <%# Phone no %>
                 <span class="hide-fully--palm"><%= store.phone_number %></span>
                 <%# //Phone no %>
