--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -1,7 +1,11 @@
 <article class="tile tile--<%= result.kind.pluralize %> box" role="article">
   <em class="hide-visually"><%= result.kind %></em>
-  <%= link_to yield, tile_path(@centre, result) %>
+  <%= link_to yield, tile_url(@centre, result) %>
   <div class="tile__controls">
-    <%= render "/shared/social_share", result.meta %>
+    <%= render "/shared/social_share",
+      url: tile_url(@centre, result),
+      title: result.meta.title,
+      image: result.meta.image
+    %>
   </div>
 </article>
