fixes white stip on micello map level selector

--- a/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
@@ -211,7 +211,9 @@
           }
 
       /* --Floor levels-- */
-      #ui-levels {}
+      #ui-levels {
+        #ui-levels-floors-container {background-color: transparent;}
+      }
 
       /* Cosmetics */
       .micello-rounded {border-radius: 0;}
