--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -47,13 +47,14 @@
     @include to-rem(width, $spacing-base* 2);
     @include to-rem(height, $spacing-base* 2);
     border: 1px solid rgba(#000, 0.15);
-    border-radius: 2px;
+    border-radius: 3px;
     background-color: #fff;
+  }
 
-    &.is-active {
-      border-bottom-right-radius:0;
-      border-bottom-left-radius:0;
-    }
+  /* Remove the border when button is active */
+  .is-active .controls__btn {
+    border-bottom-right-radius:0;
+    border-bottom-left-radius:0;
   }
 
   /* Only show on non-touch devices as they dont have hover */
