--- a/app/views/shared/_social_share.html.erb
+++ b/app/views/shared/_social_share.html.erb
@@ -28,7 +28,7 @@
     </li>
     <!-- //Google+ -->
 
-    <% if defined?(image) && !image.nil? %>
+    <% if defined?(image) && !image.blank? %>
       <!-- Pinterest -->
       <li class="social-share__pinterest">
         <a href="http://pinterest.com/pin/create/button/?url=<%=URI::encode url %>&media=<%=URI::encode image %>&description=<%=URI::encode title %>" rel="external" target="_blank"><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a>
